// Copyright 2017 The Chromium Authors
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

// This file contains the proto definition of the string-compare fuzzer.
syntax = "proto2";

package string_compare;

message StringCompare {
  required string value = 1;
}
